Added Scroll Indicators and anchors on sections (BPS)

--- a/src/app/home/home.page.css
+++ b/src/app/home/home.page.css
@@ -70,6 +70,14 @@ ion-content main nav {
 ion-content main nav .menu__span {
   font-weight: bold;
   cursor: pointer;
+  transition: 0.5s;
+}
+ion-content main nav .menu__span:hover {
+  color: var(--tertiary-color) !important;
+}
+ion-content main nav .menu__sidebar {
+  flex-direction: row;
+  gap: 2rem;
 }
 ion-content main nav .menu__sidebar button.meteor__toggle {
   background: transparent;
@@ -79,6 +87,9 @@ ion-content main nav .menu__sidebar button.meteor__toggle i {
 }
 ion-content main nav .menu__sidebar button.meteor__toggle.active i {
   color: var(--tertiary-color);
+}
+ion-content main nav .menu__sidebar button.meteor__toggle.active:hover i {
+  color: var(--primary-color);
 }
 ion-content main nav .menu__sidebar button.meteor__toggle:not(.active):hover i {
   color: var(--tertiary-color);
@@ -164,11 +175,21 @@ ion-content main section#hero .item__header span span:has(strong.active) .soc__m
   -webkit-backdrop-filter: blur(50%);
   border-radius: 50%;
   background-color: rgba(30, 41, 59, 0.5);
+  cursor: pointer;
 }
-ion-content main section#hero .item__header span span:has(strong.active) .soc__med .soc i {
+ion-content main section#hero .item__header span span:has(strong.active) .soc__med .soc a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+ion-content main section#hero .item__header span span:has(strong.active) .soc__med .soc a i {
   transition: color 0.5s, font-size 1s;
   color: var(--primary-color);
   font-size: 3rem;
+}
+ion-content main section#hero .item__header span span:has(strong.active) .soc__med .soc:hover a i {
+  color: var(--tertiary-color);
 }
 ion-content main section#hero .item__header span span .soc__med {
   width: 14rem;
@@ -226,6 +247,23 @@ ion-content main section#hero .avatar {
   top: 1rem;
   right: 3rem;
 }
+ion-content main section#hero .section__scroll {
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  bottom: 1rem;
+  transform: translateX(-50%);
+}
+ion-content main section#hero .section__scroll span {
+  opacity: 0;
+  transition: 0.5s;
+  cursor: default;
+}
+ion-content main section#hero .section__scroll:has(.circle__scroll:hover) span {
+  opacity: 1;
+}
 ion-content main section#work {
   display: grid;
   grid-template-columns: calc(40% - 2rem) calc(60% - 2rem);
@@ -262,6 +300,15 @@ ion-content main section#work .work__container {
   justify-items: center;
   overflow-y: scroll;
   padding-inline: 0 5rem;
+  position: relative;
+}
+ion-content main section#work .work__container #workExperience {
+  position: absolute;
+  top: 0;
+}
+ion-content main section#work .work__container #educationExperience {
+  position: absolute;
+  top: 50%;
 }
 ion-content main section#work .work__container::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
@@ -289,6 +336,11 @@ ion-content main section#work .work__container .work__list .header {
   flex-direction: row;
   width: auto;
   padding-inline: 1rem;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
 }
 ion-content main section#work .work__container .work__list .header .div {
   align-items: center;
@@ -435,6 +487,52 @@ ion-content main section#work .work__container .work__list .work .body .skills .
 ion-content main section#work .work__container .work__list .work.education .body .details .description {
   flex-direction: column;
 }
+ion-content main section#work .work__container .work__list .scroll {
+  display: flex;
+  align-items: center;
+  width: auto;
+  position: absolute;
+  top: 50%;
+  right: 1rem;
+  gap: 2rem;
+}
+ion-content main section#work .work__container .work__list .scroll span {
+  color: var(--primary-color);
+  transform: rotate(90deg);
+  text-transform: uppercase;
+  font-size: 0.75rem;
+}
+ion-content main section#work .work__container .work__list .scroll .arrow {
+  width: 0;
+  height: 4.5rem;
+  border: 1px solid var(--primary-color);
+  position: relative;
+  animation: scroll 1.5s infinite;
+  -webkit-animation: scroll 1.5s infinite;
+}
+ion-content main section#work .work__container .work__list .scroll .arrow::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: -5px;
+  width: 1px;
+  height: 10px;
+  border-top: 10px solid var(--primary-color);
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+}
+@keyframes scroll {
+  0% {
+    height: 4.5rem;
+  }
+  30% {
+    height: 3rem;
+  }
+  60% {
+    height: 4.5rem;
+  }
+}
 ion-content main section#projects {
   flex-direction: column;
   width: 100%;
@@ -469,6 +567,52 @@ ion-content main section#projects .section__body {
   align-items: center;
   justify-content: center;
   padding-inline: 5rem 0;
+}
+ion-content main section#projects .section__body .scroll {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 11rem;
+  position: absolute;
+  left: 50%;
+  bottom: 1rem;
+  gap: 2rem;
+}
+ion-content main section#projects .section__body .scroll span {
+  color: var(--primary-color);
+  text-transform: uppercase;
+  font-size: 0.75rem;
+}
+ion-content main section#projects .section__body .scroll .arrow {
+  width: 4.5rem;
+  height: 0;
+  border: 1px solid var(--primary-color);
+  position: relative;
+  animation: scroll-right 1.5s infinite;
+  -webkit-animation: scroll-right 1.5s infinite;
+}
+ion-content main section#projects .section__body .scroll .arrow::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  width: 0px;
+  height: 0px;
+  border-left: 10px solid var(--primary-color);
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+}
+@keyframes scroll-right {
+  0% {
+    width: 4.5rem;
+  }
+  30% {
+    width: 6rem;
+  }
+  60% {
+    width: 4.5rem;
+  }
 }
 ion-content main section#projects .section__body .project__list {
   display: grid;
