--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -364,6 +364,12 @@ ion-content {
           left: 50%;
           bottom: 1rem;
           transform: translateX(-50%);
+          opacity: 0.2;
+          transition: 0.4s;
+
+          &:hover {
+            opacity: 1;
+          }
 
           span {
             opacity: 0;
@@ -1017,15 +1023,15 @@ ion-content {
               }
               &:not(:has(.skills .skill:hover)) {
                 &:hover {
-                  .preview {
-                    img {
-                      display: none;
-                    }
+                  // .preview {
+                  //   img {
+                  //     display: none;
+                  //   }
 
-                    iframe {
-                      display: flex;
-                    }
-                  }
+                  //   iframe {
+                  //     display: flex;
+                  //   }
+                  // }
 
                   .body {
                     .details {
@@ -1053,11 +1059,19 @@ ion-content {
               .preview {
                 min-height: 15rem;
                 aspect-ratio: 2 / 1;
+                position: relative;
 
                 img,
                 iframe {
                   width: 100%;
                   height: 100%;
+                  opacity: 1;
+                }
+
+                &:has(iframe.active) {
+                  img {
+                    display: none;
+                  }
                 }
 
                 img {
@@ -1067,6 +1081,53 @@ ion-content {
                 iframe {
                   display: none;
                   zoom: 0.25;
+
+                  &.active {
+                    display: flex;
+                  }
+                }
+
+                &:has(iframe:not(.active)) {
+                  &:hover {
+                    .preview__toggle {
+                      display: flex;
+                    }
+                  }
+                }
+
+                .preview__toggle {
+                  display: none;
+                  width: 100%;
+                  height: 100%;
+                  position: absolute;
+                  top: 50%;
+                  left: 50%;
+                  transform: translate(-50%, -50%);
+                  background-color: transparent;
+                  align-items: center;
+                  justify-content: center;
+                  z-index: 1;
+
+                  span {
+                    font-size: 1rem;
+                    cursor: pointer;
+
+                    &:hover {
+                      strong {
+                        color: var(--tertiary-color) !important;
+                      }
+                    }
+                  }
+                }
+
+                &:hover {
+                  span {
+                    opacity: 1;
+                  }
+                  img {
+                    // filter: blur(0.25rem);
+                    opacity: 0.4;
+                  }
                 }
               }
 
